# chess-db

./: .gitignore  README.md  pyproject.toml
chess_db/: cli.py  config.py  db.py  engine.py  evals.py  openings.py  study.py  teach.py
scripts/: GENERATION_STRATEGY.md  add_italian.py  add_italian_extended.py  add_italian_game.py  add_italian_mastery.py  add_ponziani.py  add_ponziani_mastery.py  add_scotch.py  add_scotch_extended.py  add_scotch_game.py  add_scotch_mastery.py  generate_italian_lines.py  generate_scotch_lines.py  import_openings_tsv.py
web/: server.py
web/static/: index.html
